@@ -24,7 +24,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="wrap_content"
         android:layout_below="@id/sleep_details_header"
         android:layout_marginTop="10dp"
         app:cardCornerRadius="4dp"
@@ -41,10 +41,10 @@
 
             <ImageView
                 android:id="@+id/start_image"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="10dp"
                 android:src="@drawable/ic_play_green"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -55,35 +55,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="10dp"
                 android:text="@string/started_on"
                 android:textSize="16sp"
-                app:layout_constraintStart_toEndOf="@id/stop_red_image"
-                app:layout_constraintTop_toTopOf="parent" />
-
-
-            <ImageView
-                android:id="@+id/stop_red_image"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:src="@drawable/ic_stop_red"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:contentDescription="@string/stopped_on" />
-
-            <TextView
-                android:id="@+id/stopped_on_header"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:text="@string/stopped_on"
-                android:textSize="16sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/stop_red_image"
+                app:layout_constraintBottom_toBottomOf="@+id/start_image"
+                app:layout_constraintStart_toEndOf="@+id/start_image"
                 app:layout_constraintTop_toTopOf="parent" />
 
 
@@ -95,9 +71,33 @@
                 android:layout_marginEnd="20dp"
                 android:onClick="editDateTime"
                 android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="@+id/start_image"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="10:50:38" />
+
+
+            <ImageView
+                android:id="@+id/stop_red_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/ic_stop_red"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/start_image"/>
+
+            <TextView
+                android:id="@+id/stopped_on_header"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:text="@string/stopped_on"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="@+id/stop_red_image"
+                app:layout_constraintStart_toEndOf="@+id/stop_red_image"
+                app:layout_constraintTop_toTopOf="@+id/stop_red_image" />
 
 
             <TextView
@@ -108,10 +108,24 @@
                 android:layout_marginEnd="20dp"
                 android:onClick="editDateTime"
                 android:textSize="16sp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toBottomOf="@+id/stop_red_image"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/stop_red_image"
                 tools:text="10:50:38" />
+
+            <RatingBar
+                android:id="@+id/sleep_item_rating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:numStars="5"
+                android:rating="0"
+                android:stepSize="1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/stop_red_image" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
